kms/kustomize/kms/overlays/local/authz-kms/oathkeeper/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authz-oathkeeper-proxy
  labels:
    app: oathkeeper
spec:
  tls:
  - hosts:
      - PROXY_SERVICE_NAME.||DOMAIN||
    secretName: AUTHZ_INGRESS_TLS_SECRET
  rules:
  - host: PROXY_SERVICE_NAME.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: PROXY_SERVICE_NAME
            port:
              name: http
